<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hs3"
    tools:context=".LoginActivity"
    android:theme="@style/AppTheme">

    <TextView
        android:id="@+id/textview_quickCash9"
        android:layout_width="351dp"
        android:layout_height="63dp"
        android:background="#00D3A9"
        android:fontFamily="@font/questrial"
        android:gravity="center"
        android:text="Quick Cash"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:id="@+id/textview_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/questrial"
        android:text="Username"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edittext_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_quickCash9"
        app:layout_constraintVertical_bias="0.837" />

    <!--<com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edittext_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/passwordhint"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/design_default_color_background"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/button_finalLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/questrial"
            android:inputType="textPassword"
            android:textColorHint="@color/hintHighlight" />
    </com.google.android.material.textfield.TextInputLayout>
    -->

    <EditText
        android:id="@+id/edittext_username"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="347dp"
        android:layout_height="55dp"
        android:layout_marginTop="128dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/questrial"
        android:hint="Enter username"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="@color/hintHighlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_quickCash9"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textview_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/questrial"
        android:text="Password"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edittext_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_username"
        app:layout_constraintVertical_bias="0.305" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="347dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:fontFamily="@font/questrial"
        android:hint="Enter password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="@color/hintHighlight"
        app:layout_constraintBottom_toTopOf="@+id/button_finalLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_username" />

    <TextView
        android:id="@+id/textview_loginPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/questrial"
        android:gravity="left"
        android:text="Enter login credentials"
        android:textColor="#000000"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/textview_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_quickCash9"
        app:layout_constraintVertical_bias="0.426" />

    <Button
        android:id="@+id/button_finalLogin"
        android:layout_width="204dp"
        android:layout_height="68dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/questrial"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66"
        app:strokeColor="#00FFB7"
        app:strokeWidth="3sp" />


</androidx.constraintlayout.widget.ConstraintLayout>