...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondButtonColor"
    tools:context=".ViewTasksActivity">

    <ScrollView
        android:id="@+id/scrollview_tasks"
        android:layout_width="410dp"
        android:layout_height="483dp"
        android:layout_marginBottom="52dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearlayout_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <SearchView
...
