...



    ]]>

    <Button
        android:id="@+id/buttonApplyForTask"
        style="@style/Widget.App.Button"
        android:layout_width="123dp"
        android:layout_height="74dp"
        android:background="@color/secondButtonColor"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/questrial"
        android:text="Apply"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
