...
    <string name="user_gender">What is your gender?</string>
    <string name="user_gender_male">Male</string>
    <string name="user_gender_female">Female</string>
    <string name="user_gender_other">Other</string>
    <string name="sign_up_button">Sign Up</string>
<!--    Strings used in employee homepage -->
    <string name="employee_view_apply_tasks">View/Apply Tasks</string>
    <string name="employee_view_tasks_progress">My Tasks in Progress</string>
    <string name="employee_switch_views">Switch to Employer View</string>
<!--    Strings used in employer homepage -->
    <string name="employer_create_task">Create a Task</string>
    <string name="employer_view_applications">View Applications</string>
    <string name="employer_view_completed_tasks">View Completed Tasks</string>
...
