...
            android:text="@string/employee_view_tasks_progress"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="25sp"
            app:layout_constraintBottom_toTopOf="@+id/button_ViewMaps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_viewtasks"
            app:strokeColor="#00D3A9"
            app:strokeWidth="3sp" /><![CDATA[
...
            android:id="@+id/button_ViewMaps"
            style="@style/Widget.App.Button"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/questrial"
            android:text="View Maps"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
...
